#172 [Nimesh/Lokesh] Order and alignment fixes for N-column and text module

--- a/article/static/article/css/blocks.less
+++ b/article/static/article/css/blocks.less
@@ -165,44 +165,46 @@
     }
 
   }
-  .n-column-image {
+  .n-column-image-with-paragraph {
     clear: both;
-    margin-left: -7px;
-    margin-right: -7px;
-    &.margin-right {
-      margin-right: 30px;
-      float: left;
-    }
-    &.margin-left {
-      margin-left: 30px;
-      float: right;
-    }
-    .image-block {
-      width: auto;
-      position: relative;
-      display: table;
-      margin: 10px 7px 5px 7px;
-      .image {
-        display: table-cell;
+    .n-column-image {
+      clear: both;
+      margin-left: -7px;
+      margin-right: -7px;
+      &.margin-right {
+        margin-right: 30px;
+        float: left;
       }
-      .photo-credits {
-        position: absolute;
-        transform: rotate(-90deg);
-        width: 11px;
-        white-space: nowrap;
-        bottom: -9px;
-        color: @grey;
-        margin: 0 3px;
-        text-align: left;
-        text-transform: uppercase;
-        font-size: xx-small;
-        white-space: nowrap;
+      &.margin-left {
+        margin-left: 30px;
+        float: right;
       }
-      &:lang(ur) {
-        direction: ltr;
+      .image-block {
+        width: auto;
+        position: relative;
+        display: table;
+        margin: 10px 7px 5px 7px;
+        .image {
+          display: table-cell;
+        }
+        .photo-credits {
+          position: absolute;
+          transform: rotate(-90deg);
+          width: 11px;
+          white-space: nowrap;
+          bottom: -9px;
+          color: @grey;
+          margin: 0 3px;
+          text-align: left;
+          text-transform: uppercase;
+          font-size: xx-small;
+          white-space: nowrap;
+        }
+        &:lang(ur) {
+          direction: ltr;
+        }
       }
     }
-
   }
   .image-with-quote-and-paragraph {
 
@@ -697,8 +699,6 @@
         order: 4;
       }
 
-
-
     }
 
     .paragraph-with-raw-embed-block, .paragraph-with-embed-block, .floating-element {
@@ -776,54 +776,54 @@
         }
       }
     }
-    .n-column-image-with-paragraph{
+
+    .n-column-image-with-paragraph {
       display: flex;
       flex-direction: column;
       .n-column-image {
-      margin: 0 !important;
-      &.margin-left {
-        order: 2;
-      }
-      &.margin-right {
-        order: 1;
-      }
-      .image-block {
-        display: inline-block;
-        margin: 10px 0px;
-        .image {
-          height: auto !important;
-          width: 100%;
-          img {
+        margin: 0 !important;
+        &.margin-left {
+          order: 1;
+        }
+        &.margin-right {
+          order: 0;
+        }
+        .image-block {
+          display: inline-block;
+          margin: 10px 0px;
+          .image {
             height: auto !important;
+            width: 100%;
+            img {
+              height: auto !important;
+            }
+            i.fa-expand {
+              font-size: 15px !important;
+              padding: 5px;
+            }
           }
-          i.fa-expand {
-            font-size: 15px !important;
-            padding: 5px;
-          }
-        }
-        .photo-credits {
-          position: relative;
-          transform: none;
-          line-height: normal;
-          margin-bottom: 0;
-          width: auto;
-          text-align: right;
-          padding: 0;
-        }
-      }
-      .caption {
-        width: 100% !important;
-        .rich-text {
-          padding: 0;
-          p {
-            margin-top: 10px;
+          .photo-credits {
+            position: relative;
+            transform: none;
+            line-height: normal;
+            margin-bottom: 0;
+            width: auto;
+            text-align: right;
             padding: 0;
           }
         }
+        .caption {
+          width: 100% !important;
+          .rich-text {
+            padding: 0;
+            p {
+              margin-top: 10px;
+              padding: 0;
+            }
+          }
+        }
       }
     }
-    }
-
 
     .paragraph-with-map-block {
       .map-holder {
